# line_tracking_race

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/line_tracking_race_application/lib/line_tracking_race_application/: control_node  planner_node  referee_node
install/line_tracking_race_application/share/line_tracking_race_application/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/line_tracking_race_bringup/share/line_tracking_race_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/line_tracking_race_description/share/line_tracking_race_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/line_tracking_race_gazebo/share/line_tracking_race_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
line_tracking_race_application/: CMakeLists.txt  package.xml  setup.cfg  setup.py
line_tracking_race_application/config/: pid_params.yaml  referee_params.yaml
line_tracking_race_application/launch/: full_launch.py
line_tracking_race_application/src/line_tracking/: track_utility.py
line_tracking_race_application/src/line_tracking/nodes/: control_node.py  referee_gui_node.py  referee_node.py
line_tracking_race_application/src/line_tracking/planning_strategies/: centerline_strategy.py  centroid_strategy.py
line_tracking_race_bringup/launch/: line_tracking_race.launch.py
log/: latest_build
(+14 files in other folders)
