<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_tracking_race_application</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the ros_gz_project example</description>
  <license>Apache 2.0</license>
  <maintainer email="d.caradonna@santannapisa.it"> Daniele Caradonna</maintainer>
  <maintainer email="f.iori@santannapisa.it"> Francesco Iori</maintainer>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>scikit-image</exec_depend>

  <exec_depend>pynput-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

